--- a/resources/style.css
+++ b/resources/style.css
@@ -7,6 +7,7 @@ body {
 }
 
 
+
 /* Header - Navbar */
 
 .navbar {
@@ -34,7 +35,7 @@ body {
 
 .navbar a:hover {
     color: #ff5a5f;
-    transition: .5s;
+    transition: .3s;
 }
 
 .logo {
@@ -42,4 +43,36 @@ body {
     height: 100px;
     padding: 5px 10px;
 
+}
+
+/* Section Main */
+
+
+.welcome-message {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 100px;
+    font-size: 30px;
+}
+
+.learn-more {
+    padding: 10px 20px;
+    border-radius: 10px;
+    background-color: #087e8b;
+    cursor: pointer;
+    font-size: 16px;
+    color: #f5f5f5;
+}
+
+.learn-more:hover {
+    background-color: #ff5a5f;
+    transition: ease-out .3s;
+}
+
+.center-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
 }
