--- a/resources/style.css
+++ b/resources/style.css
@@ -74,5 +74,66 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
+}
+
+/* Colors Section */
+
+.colors-header {
+    text-align: center;
+    font-size: 30px;
+}
+
+.section-colors {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    margin-bottom: 100px;
+}
+
+.section-colors>div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.section-colors {
+    text-align: center;
+}
+
+.color-1 {
+    max-width: 300px;
+    height: 200px;
+    background-color: #087E8B;
+    text-align: center;
+    color: #f5f5f5;
+    font-size: 20px;
+}
+
+.color-2 {
+    max-width: 300px;
+    height: 200px;
+    background-color: #FF5A5F;
+    text-align: center;
+    color: #f5f5f5;
+    font-size: 20px;
+}
+
+.color-3 {
+    max-width: 300px;
+    height: 200px;
+    background-color: #3C3C3C;
+    text-align: center;
+    color: #f5f5f5;
+    font-size: 20px;
+}
+
+.color-4 {
+    max-width: 300px;
+    height: 200px;
+    background-color: #C1839F;
+    text-align: center;
+    color: #f5f5f5;
+    font-size: 20px;
 }
