--- a/resources/style.css
+++ b/resources/style.css
@@ -137,3 +137,58 @@ body {
     color: #f5f5f5;
     font-size: 20px;
 }
+
+/* Fonts Section */
+
+.fonts-header {
+    text-align: center;
+    font-size: 30px;
+}
+
+.section-fonts {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    padding-right: 80px;
+}
+
+.font-1 {
+    width: 350px;
+    text-align: center;
+    font-size: 20px;
+    padding: 0px 20px;
+    font-family: 'Roboto Slab', serif;
+}
+
+.font-2 {
+    max-width: 350px;
+    text-align: center;
+    font-size: 20px;
+    padding: 0px 20px;
+    font-family: 'Mukta', serif;
+}
+
+.font-3 {
+    max-width: 350px;
+    text-align: center;
+    font-size: 20px;
+    padding: 0px 20px;
+    font-family: 'Barlow', serif;
+    line-height: 2rem;
+}
+
+/* Font Weight */
+.font-1-italics,
+.font-2-italics,
+.font-3-italics {
+    font-weight: 100;
+    font-style: italic;
+}
+
+.font-1-bold,
+.font-2-bold,
+.font-3-bold {
+    font-weight: 700;
+    font-style: bold;
+}
